--- a/.gitignore
+++ b/.gitignore
@@ -30,11 +30,13 @@ yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
 
+# Start of Selection
 # env files (can opt-in for committing if needed)
 .env*
-
+!.env.local
 # vercel
 .vercel
+# End of Selection
 
 # typescript
 *.tsbuildinfo
