--- a/.env.local
+++ b/.env.local
@@ -1,6 +1,6 @@
-GEMINI_API_KEY=
-MONGODB_URI=
-GOOGLE_CLIENT_ID=
-GOOGLE_CLIENT_SECRET=
-NEXTAUTH_SECRET=
-NEXTAUTH_URL=
+GEMINI_API_KEY=your gemini api key
+MONGODB_URI= your mongodb uri
+GOOGLE_CLIENT_ID= your google client id
+GOOGLE_CLIENT_SECRET= your google client secret
+NEXTAUTH_SECRET= your nextauth secret
+NEXTAUTH_URL= your nextauth url
